objects/Account.object
<CustomObject>
    <fields>
        <fullName>Company_Email__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Company Email</label>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Duration__c</fullName>
        <label>Duration</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Jira_Key__c</fullName>
        <label>Jira Key</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Management__c</fullName>
        <label>Management</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S1__c</fullName>
        <label>S1</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>S2__c</fullName>
        <label>S2</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transmission__c</fullName>
        <label>Transmission</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>